tests/parser/bad/type_t-map-cid-lparen-map-cid-cid-underscore.scilla
scilla_version 0

library TestLib
let f : Map Uint128 (Map Uint128 Option something
